<resources>
    <string name="app_name">AndroidSmsTest</string>
    <string name="smsAppLabelFallback">SMS App</string>
    <string name="original_sms_app">Original Default SMS App:</string>
    <string name="current_sms_app">Current Default SMS App:</string>
    <string name="change">Change</string>
    <string name="restore">Restore</string>
    <string name="test_version">Test 20190525 0230</string>
    <string name="this_app_is_not_a_default_sms_app">This app is not a default SMS app.</string>
    <string name="title_activity_map">MapActivity</string>
</resources>
