<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/smsAppLabelFallback"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:id="@+id/originalSmsAppLabel" android:textSize="24sp"
            android:textColor="@android:color/black" app:layout_constraintVertical_bias="0.291"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/original_sms_app"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:textSize="24sp"
            android:textColor="@android:color/tertiary_text_light"
            app:layout_constraintVertical_bias="0.241"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.506"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/smsAppLabelFallback"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:id="@+id/currentSmsAppLabel" android:textSize="24sp"
            android:textColor="@android:color/black" app:layout_constraintVertical_bias="0.499"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_sms_app"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:textSize="24sp"
            android:textColor="@android:color/tertiary_text_light"
            app:layout_constraintVertical_bias="0.442"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.504"/>
    <Button
            android:text="@string/change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/changeButton" android:layout_marginEnd="92dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="92dp"/>
    <Button
            android:text="@string/restore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/restoreButton" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="92dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="92dp"/>
    <TextView
            android:text="@string/test_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/versionLabel" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"/>
    <TextView
            android:text="@string/this_app_is_not_a_default_sms_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/notDefaultSmsAppLabel" android:textSize="24sp"
            android:textColor="@android:color/holo_orange_dark" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent" android:textAllCaps="false"
            android:textStyle="italic"/>

</android.support.constraint.ConstraintLayout>